# Lux

./: .gitignore  .gitmodules  CMakeLists.txt
Renderer/: CMakeLists.txt
Renderer/Core/: AnimationClip.h  Assert.h  Buffer.h  Handle.h  IRendererBackend.h  LineVertex.h  Mesh.h  MeshLoader.cpp  MeshLoader.h  Skeleton.h  Texture.h  Types.h  UniformBuffer.h  Vertex.h  WindowHandle.h
Renderer/Vulkan/: VulkanBackend.cpp  VulkanBackend.h
Sandbox/: CMakeLists.txt  Main.cpp
Shaders/: line.vert  triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv
